--- a/index.html
+++ b/index.html
@@ -1,24 +1,123 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Button Example</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Newark Charter School BPA</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f4f6f8;
+      color: #333;
+    }
+    header {
+      background: #004080;
+      color: white;
+      text-align: center;
+      padding: 1.5rem 1rem;
+    }
+    nav {
+      background: #00264d;
+      display: flex;
+      justify-content: center;
+      padding: 0.5rem;
+    }
+    nav a {
+      color: white;
+      margin: 0 1rem;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    section {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 1rem;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    h2 {
+      color: #004080;
+    }
+    footer {
+      background: #004080;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+      margin-top: 2rem;
+    }
+    button {
+      background: #004080;
+      color: white;
+      border: none;
+      padding: 0.6rem 1rem;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 1rem;
+    }
+    button:hover {
+      background: #0066cc;
+    }
+  </style>
 </head>
 <body>
 
-  <!-- Button -->
-  <button onclick="sayHello()">Click Me</button>
+  <header>
+    <h1>Newark Charter School BPA</h1>
+    <p>Business Professionals of America Chapter</p>
+  </header>
 
-  <!-- JavaScript -->
-  <script>
-    function sayHello() {
-      alert("Hello! You clicked the button.");
-    }
-  </script>
+  <nav>
+    <a href="#about">About</a>
+    <a href="#events">Events</a>
+    <a href="#officers">Officers</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <section id="about">
+    <h2>About BPA</h2>
+    <p>
+      Newark Charter School’s BPA chapter is part of the national organization 
+      <strong>Business Professionals of America</strong>, where students 
+      develop leadership, business, and career skills through competitions, 
+      service, and teamwork.
+    </p>
+  </section>
+
+  <section id="events">
+    <h2>Upcoming Events</h2>
+    <ul>
+      <li>September 20 – BPA Interest Meeting</li>
+      <li>October 15 – Fall Leadership Conference</li>
+      <li>January 12 – Regional Competition</li>
+      <li>March 6 – State Leadership Conference</li>
+    </ul>
+  </section>
+
+  <section id="officers">
+    <h2>Chapter Officers</h2>
+    <ul>
+      <li>President – Jane Smith</li>
+      <li>Vice President – John Doe</li>
+      <li>Secretary – Maria Johnson</li>
+      <li>Treasurer – Alex Patel</li>
+    </ul>
+  </section>
+
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <p>Email: <a href="mailto:bpa@newarkcharter.org">bpa@newarkcharter.org</a></p>
+    <button onclick="alert('Thanks for your interest in BPA!')">Join BPA</button>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Newark Charter School BPA | Business Professionals of America</p>
+  </footer>
 
 </body>
 </html>
-
-
-  
-
-
