--- a/index.html
+++ b/index.html
@@ -1,123 +1,225 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Newark Charter School BPA</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Newark Charter School - BPA</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
+    /* Global Styles */
+    * {
       margin: 0;
       padding: 0;
-      background: #f4f6f8;
-      color: #333;
+      box-sizing: border-box;
     }
-    header {
-      background: #004080;
-      color: white;
-      text-align: center;
-      padding: 1.5rem 1rem;
+
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #fff;
+      color: #111;
     }
-    nav {
-      background: #00264d;
-      display: flex;
-      justify-content: center;
-      padding: 0.5rem;
-    }
-    nav a {
-      color: white;
-      margin: 0 1rem;
+
+    a {
       text-decoration: none;
+      color: inherit;
+    }
+
+    /* Header */
+    header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background: #fff;
+      padding: 10px 20px;
+      border-bottom: 2px solid #ccc;
+    }
+
+    header img {
+      height: 40px;
+    }
+
+    header .school-name {
+      font-weight: bold;
+      font-size: 18px;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 10px;
+    }
+
+    nav ul li {
+      background: #eee;
+      padding: 6px 12px;
+      border: 1px solid #000;
+      border-radius: 3px;
+    }
+
+    nav ul li:hover {
+      background: #ddd;
+    }
+
+    /* Hero Banner */
+    .hero {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: linear-gradient(to right, #001f54 50%, #b30000 50%);
+      color: #fff;
+      padding: 20px;
+      font-size: 20px;
       font-weight: bold;
     }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    section {
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 1rem;
-      background: white;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-    h2 {
-      color: #004080;
-    }
-    footer {
-      background: #004080;
-      color: white;
+
+    /* Main Section */
+    .main {
       text-align: center;
-      padding: 1rem;
-      margin-top: 2rem;
+      padding: 50px 20px;
     }
-    button {
-      background: #004080;
-      color: white;
+
+    .main img {
+      width: 150px;
+      margin-bottom: 20px;
+    }
+
+    .main h1 {
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    .main .year {
+      font-size: 16px;
+      margin: 8px 0;
+      color: #666;
+    }
+
+    .main .btn {
+      display: inline-block;
+      margin-top: 15px;
+      padding: 10px 18px;
+      background: #d50000;
+      color: #fff;
+      font-weight: bold;
       border: none;
-      padding: 0.6rem 1rem;
-      border-radius: 5px;
+      border-radius: 4px;
       cursor: pointer;
-      font-size: 1rem;
     }
-    button:hover {
-      background: #0066cc;
+
+    .main .btn:hover {
+      background: #a00000;
+    }
+
+    /* Greetings Section */
+    .greetings {
+      text-align: center;
+      padding: 40px 20px;
+      font-size: 20px;
+    }
+
+    .greetings span {
+      display: block;
+      font-size: 14px;
+      margin-top: 5px;
+      color: #444;
+    }
+
+    /* Welcome Section */
+    .welcome {
+      background: #001f54;
+      color: #fff;
+      text-align: center;
+      padding: 50px 20px;
+    }
+
+    .welcome h2 {
+      font-size: 26px;
+      margin-bottom: 15px;
+    }
+
+    .welcome p {
+      max-width: 700px;
+      margin: 0 auto 20px;
+      font-size: 14px;
+      line-height: 1.6;
+    }
+
+    .welcome .contact {
+      margin-top: 15px;
+      font-size: 13px;
+    }
+
+    /* Bottom Arrow */
+    .arrow {
+      text-align: right;
+      background: #b30000;
+      padding: 10px 20px;
+    }
+
+    .arrow button {
+      background: none;
+      border: none;
+      color: #fff;
+      font-size: 20px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
 
+  <!-- Header -->
   <header>
-    <h1>Newark Charter School BPA</h1>
-    <p>Business Professionals of America Chapter</p>
+    <div class="school-name">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Red_star.svg/1200px-Red_star.svg.png" alt="Logo">
+      NEWARK <br> CHARTER SCHOOL
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">NCS and BPA Leadership</a></li>
+        <li><a href="#">BPA Chapter Information</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <nav>
-    <a href="#about">About</a>
-    <a href="#events">Events</a>
-    <a href="#officers">Officers</a>
-    <a href="#contact">Contact</a>
-  </nav>
+  <!-- Hero Section -->
+  <div class="hero">
+    <div>HOME PAGE</div>
+    <div>Business Professionals <br> of America</div>
+  </div>
 
-  <section id="about">
-    <h2>About BPA</h2>
+  <!-- Main Section -->
+  <section class="main">
+    <img src="https://via.placeholder.com/150" alt="Capture the Moment Logo">
+    <h1>NEWARK CHARTER <br> SCHOOL</h1>
+    <div class="year">2024 - 2025</div>
+    <button class="btn">JOIN BPA NOW!</button>
+  </section>
+
+  <!-- Greetings Section -->
+  <section class="greetings">
+    <h2>GREETINGS</h2>
+    <span>Newark, DE</span>
+  </section>
+
+  <!-- Welcome Section -->
+  <section class="welcome">
+    <h2>Welcome <br> to our Site</h2>
     <p>
-      Newark Charter School’s BPA chapter is part of the national organization 
-      <strong>Business Professionals of America</strong>, where students 
-      develop leadership, business, and career skills through competitions, 
-      service, and teamwork.
+      Welcome to NCS-BPA.com. Here we welcome you to the information you need to know about 
+      our school and about BPA. This site includes information such as, The Torch award, 
+      State Leadership Conference, BPA School Leadership, and many more. We hope you find 
+      this site informational! <br><br> – Thank you
     </p>
+    <div class="contact">
+      Contact us – <br>
+      ncsbpawebsite7th@gmail.com
+    </div>
   </section>
 
-  <section id="events">
-    <h2>Upcoming Events</h2>
-    <ul>
-      <li>September 20 – BPA Interest Meeting</li>
-      <li>October 15 – Fall Leadership Conference</li>
-      <li>January 12 – Regional Competition</li>
-      <li>March 6 – State Leadership Conference</li>
-    </ul>
-  </section>
-
-  <section id="officers">
-    <h2>Chapter Officers</h2>
-    <ul>
-      <li>President – Jane Smith</li>
-      <li>Vice President – John Doe</li>
-      <li>Secretary – Maria Johnson</li>
-      <li>Treasurer – Alex Patel</li>
-    </ul>
-  </section>
-
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <p>Email: <a href="mailto:bpa@newarkcharter.org">bpa@newarkcharter.org</a></p>
-    <button onclick="alert('Thanks for your interest in BPA!')">Join BPA</button>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Newark Charter School BPA | Business Professionals of America</p>
-  </footer>
+  <!-- Arrow -->
+  <div class="arrow">
+    <button>&#10132;</button>
+  </div>
 
 </body>
 </html>
