--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Newark Charter School - BPA</title>
   <style>
-    /* Global Styles */
+    /* Reset */
     * {
       margin: 0;
       padding: 0;
@@ -14,7 +14,7 @@
 
     body {
       font-family: Arial, sans-serif;
-      background-color: #fff;
+      background: #fff;
       color: #111;
     }
 
@@ -23,23 +23,26 @@
       color: inherit;
     }
 
-    /* Header */
+    /* HEADER */
     header {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      background: #fff;
       padding: 10px 20px;
-      border-bottom: 2px solid #ccc;
+      background: #fff;
+      border-bottom: 1px solid #ccc;
     }
 
-    header img {
-      height: 40px;
-    }
-
-    header .school-name {
-      font-weight: bold;
+    .logo-name {
+      display: flex;
+      align-items: center;
+      gap: 10px;
       font-size: 18px;
+      font-weight: bold;
+    }
+
+    .logo-name img {
+      height: 45px;
     }
 
     nav ul {
@@ -49,37 +52,36 @@
     }
 
     nav ul li {
-      background: #eee;
-      padding: 6px 12px;
       border: 1px solid #000;
-      border-radius: 3px;
+      padding: 6px 12px;
+      font-size: 14px;
+      background: #f5f5f5;
     }
 
     nav ul li:hover {
       background: #ddd;
     }
 
-    /* Hero Banner */
-    .hero {
+    /* TOP STRIP */
+    .top-strip {
       display: flex;
       justify-content: space-between;
-      align-items: center;
-      background: linear-gradient(to right, #001f54 50%, #b30000 50%);
+      background: linear-gradient(to right, #0c1a4b 50%, #b40000 50%);
       color: #fff;
-      padding: 20px;
-      font-size: 20px;
       font-weight: bold;
+      padding: 10px 20px;
+      font-size: 18px;
     }
 
-    /* Main Section */
+    /* MAIN SECTION */
     .main {
       text-align: center;
       padding: 50px 20px;
     }
 
     .main img {
-      width: 150px;
-      margin-bottom: 20px;
+      width: 140px;
+      margin-bottom: 15px;
     }
 
     .main h1 {
@@ -88,20 +90,19 @@
     }
 
     .main .year {
+      margin-top: 8px;
       font-size: 16px;
-      margin: 8px 0;
-      color: #666;
+      color: #444;
     }
 
     .main .btn {
-      display: inline-block;
       margin-top: 15px;
-      padding: 10px 18px;
+      padding: 10px 20px;
       background: #d50000;
       color: #fff;
       font-weight: bold;
       border: none;
-      border-radius: 4px;
+      border-radius: 3px;
       cursor: pointer;
     }
 
@@ -109,30 +110,33 @@
       background: #a00000;
     }
 
-    /* Greetings Section */
+    /* GREETINGS */
     .greetings {
       text-align: center;
       padding: 40px 20px;
-      font-size: 20px;
+    }
+
+    .greetings h2 {
+      font-size: 26px;
+      letter-spacing: 2px;
+      margin-bottom: 5px;
     }
 
     .greetings span {
-      display: block;
       font-size: 14px;
-      margin-top: 5px;
-      color: #444;
+      color: #666;
     }
 
-    /* Welcome Section */
+    /* WELCOME SECTION */
     .welcome {
-      background: #001f54;
+      background: #0c1a4b;
       color: #fff;
       text-align: center;
       padding: 50px 20px;
     }
 
     .welcome h2 {
-      font-size: 26px;
+      font-size: 24px;
       margin-bottom: 15px;
     }
 
@@ -144,22 +148,23 @@
     }
 
     .welcome .contact {
-      margin-top: 15px;
+      margin-top: 10px;
       font-size: 13px;
     }
 
-    /* Bottom Arrow */
-    .arrow {
-      text-align: right;
-      background: #b30000;
-      padding: 10px 20px;
+    /* RED BOTTOM ARROW STRIP */
+    .arrow-strip {
+      background: #b40000;
+      padding: 15px;
+      display: flex;
+      justify-content: flex-end;
     }
 
-    .arrow button {
+    .arrow-strip button {
       background: none;
       border: none;
       color: #fff;
-      font-size: 20px;
+      font-size: 22px;
       cursor: pointer;
     }
   </style>
@@ -168,9 +173,12 @@
 
   <!-- Header -->
   <header>
-    <div class="school-name">
+    <div class="logo-name">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Red_star.svg/1200px-Red_star.svg.png" alt="Logo">
-      NEWARK <br> CHARTER SCHOOL
+      <div>
+        NEWARK <br>
+        CHARTER SCHOOL
+      </div>
     </div>
     <nav>
       <ul>
@@ -181,27 +189,27 @@
     </nav>
   </header>
 
-  <!-- Hero Section -->
-  <div class="hero">
+  <!-- Red/Blue Strip -->
+  <div class="top-strip">
     <div>HOME PAGE</div>
     <div>Business Professionals <br> of America</div>
   </div>
 
-  <!-- Main Section -->
+  <!-- Main -->
   <section class="main">
-    <img src="https://via.placeholder.com/150" alt="Capture the Moment Logo">
+    <img src="https://via.placeholder.com/140" alt="Capture the Moment Logo">
     <h1>NEWARK CHARTER <br> SCHOOL</h1>
     <div class="year">2024 - 2025</div>
     <button class="btn">JOIN BPA NOW!</button>
   </section>
 
-  <!-- Greetings Section -->
+  <!-- Greetings -->
   <section class="greetings">
     <h2>GREETINGS</h2>
     <span>Newark, DE</span>
   </section>
 
-  <!-- Welcome Section -->
+  <!-- Welcome -->
   <section class="welcome">
     <h2>Welcome <br> to our Site</h2>
     <p>
@@ -216,8 +224,8 @@
     </div>
   </section>
 
-  <!-- Arrow -->
-  <div class="arrow">
+  <!-- Bottom Arrow -->
+  <div class="arrow-strip">
     <button>&#10132;</button>
   </div>
 
